--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href="#">
                     <img src="images/logo-white.svg" class="logo" alt="logo">
                 </a>
-                <p class="address">Melrose Place, 90210<br>USA</p>
+                <p class="address">Mumbai, 401209<br>India</p>
                 <ul class="footer-links">
                     <li><a href="#">Terms of Service</a></li>
                     <li><a href="#">Privacy Policy</a></li>
